unpackaged/main/default/objects/pro_OCR_Document_Line__c/pro_OCR_Document_Line__c.object-meta.xml
<CustomObject>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>OCR Document Line</label>
    <nameField>
        <displayFormat>OCRL-{0000}</displayFormat>
        <label>OCR Document Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCR Document Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>