unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/DB__c.field-meta.xml
<CustomField>
    <fullName>DB__c</fullName>
    <label>dbId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>