unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Consignor__c.field-meta.xml
<CustomField>
    <fullName>pro_Consignor__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Consignor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>