unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Description__c.field-meta.xml
<CustomField>
    <fullName>pro_Description__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>