unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Document_Number__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Document Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>