unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_OCR_Document__c.field-meta.xml
<CustomField>
    <fullName>pro_OCR_Document__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>OCR Document</label>
    <referenceTo>pro_OCR_Document__c</referenceTo>
    <relationshipLabel>OCR Document Lines</relationshipLabel>
    <relationshipName>OCR_Document_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>