unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Payable_Line__c.field-meta.xml
<CustomField>
    <fullName>pro_Payable_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Line Referance</label>
    <referenceTo>AcctSeed__Account_Payable_Line__c</referenceTo>
    <relationshipLabel>OCR Document Lines</relationshipLabel>
    <relationshipName>OCR_Document_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>