unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Quantity__c.field-meta.xml
<CustomField>
    <fullName>pro_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>