unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_ROVoucherError__c.field-meta.xml
<CustomField>
    <fullName>pro_ROVoucherError__c</fullName>
    <label>ROVoucherError</label>
    <type>TextArea</type>
</CustomField>