unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_ROVoucherStatus__c.field-meta.xml
<CustomField>
    <fullName>pro_ROVoucherStatus__c</fullName>
    <defaultValue>&quot;Todo&quot;</defaultValue>
    <label>ROVoucherStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todo</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Vouchered</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>