unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Total_Amount__c</fullName>
    <description>MD - 03/10/2023 - Created by prodigy</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>