unpackaged/main/default/objects/pro_OCR_Document_Line__c/fields/pro_Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Unit_Amount__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>